Feature 4: Production Configuration & Deployment Ready - Enhanced application.properties with comprehensive configuration - Added production profile (application-prod.properties) with environment variables - Integrated Spring Boot Actuator for monitoring and health checks - Created multi-stage Dockerfile with security best practices - Added Docker Compose with PostgreSQL support for production - Created Heroku Procfile for cloud deployment - Added PostgreSQL driver for production database support - Comprehensive README with deployment instructions - Environment variable configuration for cloud platforms - Health checks and monitoring endpoints - Production-optimized JVM settings and security features - Complete documentation for local, Docker, and cloud deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,54 @@
-# Application Configuration
-spring.application.name=student-study-portal
-
-# Server Configuration
+# Spring Boot Application Configuration
+spring.application.name=study-schedule-therapy
 server.port=8080
 
-# Database Configuration (H2 for development)
-spring.datasource.url=jdbc:h2:mem:testdb
+# Database Configuration
+spring.datasource.url=jdbc:h2:mem:studydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# JPA Configuration
+# JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
-# H2 Console (for development)
+# H2 Console Configuration (Development only)
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 
 # Thymeleaf Configuration
 spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=INFO
+logging.level.org.example=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Application Information
+info.app.name=Study Schedule Therapy
+info.app.description=AI-Powered Study Scheduling Portal
+info.app.version=1.0.0
+info.app.java.version=17
+
+# Management and Actuator
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+management.info.env.enabled=true
+
+# AI Service Configuration
+app.ai.service.url=http://localhost:8085
+app.ai.service.timeout=5000
+app.ai.service.enabled=true
+
+# Study Recommendations Configuration
+app.study.default-session-duration=75
+app.study.max-session-duration=180
+app.study.min-session-duration=30
+app.study.break-interval=15
