--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     // Database
     runtimeOnly 'com.h2database:h2'
+
+    // Optional: PostgreSQL for production
+    runtimeOnly 'org.postgresql:postgresql'
 
     // For AI integration
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
