--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,16 @@ dependencies {
     // For AI integration
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-    // Testing
+    // Testing - Fixed configuration
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+test {
+    useJUnitPlatform()
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
 }
