--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,13 @@
 spring.application.name=study-schedule-therapy
 server.port=8080
 
+# Internationalization
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
+spring.messages.cache-duration=3600
+spring.web.locale=en
+spring.web.locale-resolver=session
+
 # Database Configuration
 spring.datasource.url=jdbc:h2:mem:studydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
