--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### Node.js ###
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -40,3 +47,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### Deployment ###
+dist/
