--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,36 +1,48 @@
 # Production Configuration Profile
-spring.application.name=??????? ????
+spring.application.name=Study Portal
 server.port=${PORT:8080}
 
-# Database configuration for production
-spring.datasource.url=${DATABASE_URL:jdbc:h2:mem:testdb}
-spring.datasource.username=${DB_USERNAME:sa}
-spring.datasource.password=${DB_PASSWORD:}
-spring.datasource.driver-class-name=${DB_DRIVER:org.h2.Driver}
+# Database configuration for production - Using file-based H2 for persistence
+spring.datasource.url=jdbc:h2:file:./data/studyportal;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
-# JPA/Hibernate properties
-spring.jpa.hibernate.ddl-auto=create-drop
+# JPA/Hibernate properties for production
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.H2Dialect}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.open-in-view=false
 
-# H2 Console (disable in production)
+# H2 Console (disable in production for security)
 spring.h2.console.enabled=false
 
-# Actuator endpoints
-management.endpoints.web.exposure.include=health,info
+# Actuator endpoints for health monitoring
+management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=when-authorized
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
 
-# Logging
-logging.level.org.springframework=INFO
+# Logging configuration
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=WARN
 logging.level.org.example=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
-# AI Service Configuration
-ai.service.url=${AI_SERVICE_URL:http://localhost:8085}
-ai.service.timeout=30s
+# Security settings
+server.error.include-message=never
+server.error.include-binding-errors=never
+server.error.include-stacktrace=never
 
-# Application Info
-info.app.name=??????? ???? (Study Association)
-info.app.description=AI-Enhanced Student Study Scheduling Portal
-info.app.version=2.0.0
-info.app.encoding=UTF-8
-info.app.java.version=17
+# Render-specific optimizations
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+
+# Session management
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
