--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.messages.cache-duration=3600
 spring.web.locale=en
 spring.web.locale-resolver=session
 
-# Database Configuration
+# Database Configuration (H2 for development)
 spring.datasource.url=jdbc:h2:mem:studydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -18,25 +18,26 @@ spring.datasource.password=
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# H2 Console Configuration (Development only)
+# H2 Console Configuration (for database inspection)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+spring.h2.console.settings.web-allow-others=true
 
-# Thymeleaf Configuration
-spring.thymeleaf.cache=false
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
+# Static Resources Configuration
+spring.web.resources.static-locations=classpath:/static/,file:static-site/
+spring.mvc.static-path-pattern=/**
+
+# Session Configuration
+server.servlet.session.timeout=30m
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
 
 # Logging Configuration
-logging.level.org.springframework=INFO
-logging.level.org.hibernate=INFO
 logging.level.org.example=DEBUG
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.level.org.springframework.security=DEBUG
 
 # Application Information
 info.app.name=Study Schedule Therapy
