--- a/build.gradle
+++ b/build.gradle
@@ -35,16 +35,24 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // Database
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
 
+    // Password encryption
+    implementation 'org.springframework.security:spring-security-crypto'
+
     // For AI integration
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+    // JSON processing
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
