--- a/package.json
+++ b/package.json
@@ -5,14 +5,164 @@
   "scripts": {
     "build": "gradle build -x test",
     "build:static": "mkdir -p build/static && cp -r static-site/* build/static/",
+    "build:webpack": "webpack --mode production",
+    "build:tailwind": "tailwindcss -i ./src/main/resources/static/css/input.css -o ./src/main/resources/static/css/output.css --watch",
+    "dev:webpack": "webpack serve --mode development",
+    "dev:ai": "cd ai-service && python app.py",
+    "start:ai": "cd ai-service && pip install -r requirements.txt && python app.py",
     "deploy": "surge build/static/ --domain adhyayan-sangha.surge.sh",
     "deploy:new": "npm run build:static && surge build/static/",
-    "deploy:auto": "./deploy-surge.sh"
+    "deploy:auto": "./deploy-surge.sh",
+    "test": "echo \"No tests specified\" && exit 0"
   },
-  "keywords": ["study", "scheduling", "ai", "bengali", "education"],
+  "keywords": [
+    "study",
+    "scheduling",
+    "ai",
+    "bengali",
+    "education"
+  ],
   "author": "Java Fest 2025",
   "license": "MIT",
   "devDependencies": {
     "surge": "^0.23.1"
-  }
+  },
+  "main": "index.js",
+  "dependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.18",
+    "@vue/compiler-sfc": "^3.5.21",
+    "ajv": "^6.12.6",
+    "ansi-escapes": "^3.2.0",
+    "ansi-regex": "^4.1.1",
+    "ansi-styles": "^3.2.1",
+    "asn1": "^0.2.6",
+    "assert-plus": "^1.0.0",
+    "asynckit": "^0.4.0",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.13.2",
+    "babel-loader": "^10.0.0",
+    "balanced-match": "^1.0.2",
+    "bcrypt-pbkdf": "^1.0.2",
+    "block-stream": "^0.0.9",
+    "brace-expansion": "^2.0.2",
+    "caseless": "^0.12.0",
+    "chalk": "^2.4.2",
+    "chardet": "^0.7.0",
+    "cli-cursor": "^2.1.0",
+    "cli-table3": "^0.5.1",
+    "cli-width": "^2.2.1",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "colors": "^1.4.0",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "core-util-is": "^1.0.2",
+    "dashdash": "^1.14.1",
+    "delayed-stream": "^1.0.0",
+    "ecc-jsbn": "^0.1.2",
+    "escape-string-regexp": "^1.0.5",
+    "extend": "^3.0.2",
+    "external-editor": "^3.1.0",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "figures": "^2.0.0",
+    "forever-agent": "^0.6.1",
+    "form-data": "^2.3.3",
+    "fs.realpath": "^1.0.0",
+    "fstream": "^1.0.12",
+    "getpass": "^0.1.7",
+    "glob": "^7.2.3",
+    "graceful-fs": "^4.2.11",
+    "har-schema": "^2.0.0",
+    "har-validator": "^5.1.5",
+    "has-flag": "^3.0.0",
+    "http-signature": "^1.2.0",
+    "iconv-lite": "^0.4.24",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "inquirer": "^6.5.2",
+    "is-domain": "^0.0.1",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-typedarray": "^1.0.0",
+    "isstream": "^0.1.2",
+    "jsbn": "^0.1.1",
+    "json-schema": "^0.4.0",
+    "json-schema-traverse": "^0.4.1",
+    "json-stringify-safe": "^5.0.1",
+    "jsprim": "^1.4.2",
+    "lodash": "^4.17.21",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-fn": "^1.2.0",
+    "minimatch": "^7.4.6",
+    "minimist": "^1.2.3",
+    "mkdirp": "^0.5.6",
+    "moniker": "^0.1.2",
+    "mute-stream": "^0.0.7",
+    "netrc": "^0.1.4",
+    "oauth-sign": "^0.9.0",
+    "object-assign": "^4.1.1",
+    "once": "^1.4.0",
+    "onetime": "^2.0.1",
+    "os-tmpdir": "^1.0.2",
+    "path-is-absolute": "^1.0.1",
+    "performance-now": "^2.1.0",
+    "progress": "^1.1.8",
+    "psl": "^1.15.0",
+    "punycode": "^2.3.1",
+    "qs": "^6.5.3",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "read": "^1.0.5",
+    "request": "^2.88.2",
+    "restore-cursor": "^2.0.0",
+    "rimraf": "^2.7.1",
+    "run-async": "^2.4.1",
+    "rxjs": "^6.6.7",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "signal-exit": "^3.0.7",
+    "split": "^0.3.1",
+    "sshpk": "^1.18.0",
+    "string-width": "^2.1.1",
+    "strip-ansi": "^5.2.0",
+    "supports-color": "^5.5.0",
+    "surge-fstream-ignore": "^1.1.0",
+    "surge-ignore": "^0.2.0",
+    "tailwindcss": "^4.1.13",
+    "tarr": "^1.1.0",
+    "through": "^2.3.8",
+    "tmp": "^0.0.33",
+    "tough-cookie": "^2.5.0",
+    "tslib": "^1.14.1",
+    "tunnel-agent": "^0.6.0",
+    "tweetnacl": "^0.14.5",
+    "uri-js": "^4.4.1",
+    "url-parse-as-address": "^1.0.0",
+    "uuid": "^3.4.0",
+    "verror": "^1.10.0",
+    "vue": "^3.5.21",
+    "vue-loader": "^17.4.2",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^6.0.1",
+    "wrappy": "^1.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/punam06/StudyScheduleTherap.git"
+  },
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/punam06/StudyScheduleTherap/issues"
+  },
+  "homepage": "https://github.com/punam06/StudyScheduleTherap#readme"
 }
