--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,15 @@ spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 spring.messages.cache-duration=3600
 spring.web.locale=en
-spring.web.locale-resolver=session
+spring.web.locale-resolver=fixed
+
+# JSP Configuration
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+server.servlet.jsp.init-parameters.development=true
+
+# JSF Configuration - moved to web.xml or context parameters
+# These will be configured in JsfConfig.java instead
 
 # Database Configuration (H2 for development)
 spring.datasource.url=jdbc:h2:mem:studydb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
